--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <ul class="slider" >
             <li id="slide1" >
                 <iframe width="540" height="300" 
-                src="https://www.youtube.com/embed/JnSGTe6-i1Q?autoplay=1" 
+                src="https://www.youtube.com/embed/JnSGTe6-i1Q?autoplay=1&loop=1"
                 title="WADE Y EMBER HACEN CONTACTO POR PRIMERA VEZ Elementos escena [Elemental] 
                 scene" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
                  gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li id="slide2">
         
-                 <iframe  width="540" height="300" src="https://www.youtube.com/embed/YJ3PiZ1B4ow?autoplay=1"
+                 <iframe  width="540" height="300" src="https://www.youtube.com/embed/YJ3PiZ1B4ow?autoplay=1&loop=1"
                  title="wade frase romantica" frameborder="0" 
                  allow="accelerometer; autoplay; clipboard-write; 
                  encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
